# plct-archrv-pkg-bot

./: .env.example  .gitignore  README.md  _emoji.js  _rand.js  _shuffle.js  _timedCache.js  initialize.sh  package.json  restart.sh  start-plct-tg-bot.sh  start-tg-6.sh  tg-6.js  tsconfig.json  utils.js
.github/workflows/: ci.yml
config/: .env.example
docs/: USAGE.md  http-UML.md
server/: .gitignore  Cargo.toml
server/migrations/: 20221121091440_initialize.sql
server/src/: main.rs  model.rs  routes.rs  sql.rs  tg.rs
server/tests/: libtest.ts  prepare_test.sh  server_test.sh  server_test.ts
src/: _emoji.ts  _obj2table.js  _obj2table.ts  _translations.json  _verbose.js  _verbose.ts  i18n.js  i18n.ts  plct-archrv-bot.js  plct-archrv-bot.ts  tg-6.js  types.ts  utils.js  utils.ts
