[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls", "sqlite" ] }
actix-web = "4.2.1"
tokio = { version = "1.22.0", features = [ "macros", "rt-multi-thread" ] }
anyhow = "1.0.66"
dotenvy = "0.15.6"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
